Fix alignment of reservation flow on mobile

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -215,6 +215,9 @@ main.reservation-page {
         margin: 0;
         line-height: 28px;
       }
+      .image-wrapper {
+        padding: 0 15px;
+      }
       .image-wrapper img {
         margin: 0;
         border-radius: 0px;
@@ -275,7 +278,7 @@ main.reservation-page {
       .charges {
         border: 0px none;
         border-radius: 0px;
-        padding: 0;
+        padding: 0 15px;
         display: block;
         td {
           font-weight: bold;
